vbnc/vbnc/tests/Errors/30530-5.vb
Module ArgumentTypeInference
    Function a(ByVal A As Integer) As Integer
        Return 0
    End Function
End Module